--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -30,7 +30,8 @@ img.emoji{
 // make non-headings slightly lighter
 .post-content p, .post-content li {
    font-size: 16px;
-   color: #515151;
+//    color: #515151;
+   color: rgb(77 77 158);
 }
 
 .post-link{
