--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -30,8 +30,7 @@ img.emoji{
 // make non-headings slightly lighter
 .post-content p, .post-content li {
    font-size: 16px;
-//    color: #515151;
-   color: rgb(77 77 158);
+   color: #515151;
 }
 
 .post-link{
@@ -274,4 +273,36 @@ pre code {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+// Update custom css
+.post-title, .post-content h1 {
+    font-size: 2.05rem;
+}
+
+.site-footer {
+    padding: 0;
+}
+
+p.feed-subscribe {
+    display: none;
+}
+
+.footer-col {    
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.footer-col > p {
+    margin-top: 10px!important;
+    margin-bottom: 0!important;
+}
+
+ul.social-media-list > li {
+    margin: 0!important;
+}
+
+ul.social-media-list > li > a {
+    padding: 0!important;
+    border: none;
 }
