--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,6 +427,20 @@ pre code { font-size: 15px !important; }
 
 .youtube-iframe-wrapper iframe, .youtube-iframe-wrapper object, .youtube-iframe-wrapper embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
+.post-title, .post-content h1 { font-size: 2.05rem; }
+
+.site-footer { padding: 0; }
+
+p.feed-subscribe { display: none; }
+
+.footer-col { margin-bottom: 0; text-align: center; }
+
+.footer-col > p { margin-top: 10px !important; margin-bottom: 0 !important; }
+
+ul.social-media-list > li, ul.pagination > li { margin: 0 !important; }
+
+ul.social-media-list > li > a, ul.pagination > li > a { padding: 0 !important; border: none; }
+
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
