--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -291,6 +291,7 @@ p.feed-subscribe {
 .footer-col {    
     margin-bottom: 0;
     text-align: center;
+    font-size: 85%;
 }
 
 .footer-col > p {
@@ -305,4 +306,9 @@ ul.social-media-list > li {
 ul.social-media-list > li > a {
     padding: 0!important;
     border: none;
+}
+
+.footer-col-wrapper {
+    display: block;
+    margin-bottom: 10px;
 }
