--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,13 +433,15 @@ pre code { font-size: 15px !important; }
 
 p.feed-subscribe { display: none; }
 
-.footer-col { margin-bottom: 0; text-align: center; }
+.footer-col { margin-bottom: 0; text-align: center; font-size: 85%; }
 
 .footer-col > p { margin-top: 10px !important; margin-bottom: 0 !important; }
 
 ul.social-media-list > li, ul.pagination > li { margin: 0 !important; }
 
 ul.social-media-list > li > a, ul.pagination > li > a { padding: 0 !important; border: none; }
+
+.footer-col-wrapper { display: block; margin-bottom: 10px; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
