footer style updates

--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -310,5 +310,9 @@ ul.social-media-list > li > a {
 
 .footer-col-wrapper {
     display: block;
+    margin-bottom: 5px;
+}
+
+.social-links {
     margin-bottom: 10px;
 }
