--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -288,15 +288,10 @@ p.feed-subscribe {
     display: none;
 }
 
-.footer-col {    
-    margin-bottom: 0;
-    text-align: center;
-    font-size: 85%;
-}
-
-.footer-col > p {
-    margin-top: 10px!important;
-    margin-bottom: 0!important;
+.footer-description {
+  text-align: center;
+  margin-top: 10px!important;
+  margin-bottom: 0!important;
 }
 
 ul.social-media-list > li {
@@ -306,11 +301,6 @@ ul.social-media-list > li {
 ul.social-media-list > li > a {
     padding: 0!important;
     border: none;
-}
-
-.footer-col-wrapper {
-    display: block;
-    margin-bottom: 5px;
 }
 
 .social-links {
