--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -290,6 +290,9 @@ p.feed-subscribe {
 
 .footer-description {
   text-align: center;
+}
+
+.footer-description > p{  
   margin-top: 10px!important;
   margin-bottom: 0!important;
 }
