--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,7 +433,9 @@ pre code { font-size: 15px !important; }
 
 p.feed-subscribe { display: none; }
 
-.footer-description { text-align: center; margin-top: 10px !important; margin-bottom: 0 !important; }
+.footer-description { text-align: center; }
+
+.footer-description > p { margin-top: 10px !important; margin-bottom: 0 !important; }
 
 ul.social-media-list > li, ul.pagination > li { margin: 0 !important; }
 
