update final footer updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,9 @@
   
     <div class="wrapper">
       <div class="footer-description">
-        <p>{{ site.description | escape }}
-            <a href="https://fastpages.fast.ai/">FastPages.ai</a>
+        <p>
+          ©2021-2022 
+          <a href="https://github.com/gihanrt">Gihan Rathnayake</a> · Powered By <a href="https://fastpages.fast.ai/">FastPages.ai</a>
         </p>
       </div>
   
